<resources>
    <string name="app_name">Movie Maniac</string>
    <string name="title_movie_detail">Movie Detail</string>

    <!-- Menu Actions -->
    <string name="menu_action_top_rated">Top Rated</string>
    <string name="menu_action_popular">Popular</string>
    <string name="menu_action_sort">Sort</string>
    <string name="menu_action_favorites">Favorites</string>

    <!-- Placeholders-->
    <string name="placeholder_release_year">Release Year: %1$S</string>

    <!--TextView Titles -->
    <string name="tv_release_year">Release Year:</string>
    <string name="tv_title_plot">Plot:</string>
    <string name="tv_title_trailers">Trailers:</string>
    <string name="tv_title_reviews">Reviews:</string>
    <string name="tv_title_rating">Rating</string>
    <string name="tv_title_popularity">Popularity:</string>
    <string name="tv_title_vote_count">Vote Count:</string>

    <string name="read_more">Read More</string>
    <string name="button_close">Close</string>
    <string name="message_empty_movie_fragment">Please choose a movie</string>

    <!--Texts-->
    <string name="no_network_text">Oops, Something\'s wrong\nMake sure you are connected to network.</string>
    <string name="no_movie_text">No Movies Selected.</string>

    <!-- Preference Keys -->
    <string name="prefs_name">com.thomaskioko.moviemaniac.Prefs</string>
    <string name="prefs_key_type">movie_list_type</string>
    <string name="prefs_key_type_popular">PREF_MOVIE_LIST_TYPE</string>
    <string name="no_favorite_movie_text">No movies added to favorites</string>
</resources>
