<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/movie_detail_reviews_item_width"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_mini">

    <TextView
        android:id="@+id/review_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_plot"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/review_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:maxLines="@integer/max_review_lines"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/review_read_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="end"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/read_more" />
</LinearLayout>